HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignConst/Expected.uv
//! Expected diagnostic metadata for the AssignConst rejected-source specimen.

expectedDiagnostic("E-TYP-1601", "diagnostics.PermissionAdmissibility")
